apply plugin: 'com.android.application'

android {
    namespace "souch.smp"
    signingConfigs {
        release {
        }
    }
    compileSdkVersion 36
    defaultConfig {
        applicationId "souch.smp"
        minSdkVersion 24 // Android 7.0
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 28
        versionCode 32
        versionName '2.3.1'
        vectorDrawables.useSupportLibrary = true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true

        }
    }
    flavorDimensions "version"
    productFlavors {
        // for freeware and fdroid version
        free {
            resValue "string", "app_name", "SicMu Player"
        }
        // for pro version
        pro {
            resValue "string", "app_name", "SicMu Player Pro"
            applicationIdSuffix ".pro"
            versionNameSuffix "-pro"
        }

    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        buildConfig true
    }
//    lintOptions {
//        baseline file("lint-baseline.xml")
//    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    //androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.2.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'androidx.test:core:1.7.0'
    testImplementation 'com.google.android:android-test:4.1.1.4'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.core:core:1.17.0'
    implementation 'androidx.media:media:1.7.1'
    implementation "androidx.media3:media3-exoplayer:1.8.0"
    implementation "androidx.media3:media3-exoplayer-hls:1.8.0"
    implementation "androidx.media3:media3-session:1.8.0"
    implementation "androidx.media3:media3-datasource:1.8.0"
    //implementation 'androidx.preference:preference:1.1.0'
    implementation 'com.github.AdrienPoupa:jaudiotagger:2.2.3'
    def room_version = "2.8.4"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
}
